--- a/sites/all/modules/contrib/features/features.css
+++ b/sites/all/modules/contrib/features/features.css
@@ -1,4 +1,58 @@
 /**
+ * Features packages.
+ */
+div.features-form-links {
+  width:20%;
+  float:left;
+  }
+
+div.features-form-content {
+  width:80%;
+  float:right;
+  }
+
+/**
+ * Package links.
+ */
+div.features-form-links ul#features-form-links,
+div.features-form-links ul#features-form-links li,
+div.features-form-links ul#features-form-links li a {
+  display:block;
+  float:none;
+  padding:0px;
+  margin:0px;
+  }
+
+  div.features-form-links ul#features-form-links { margin:0px 0px 10px; }
+
+  div.features-form-links ul#features-form-links li a {
+    background:#f8f8f8;
+    padding:5px 5px 4px 4px;
+    border-left:1px solid #eee;
+    border-bottom:1px solid #eee;
+    cursor:pointer;
+    }
+
+  div.features-form-links ul#features-form-links li a.features-package-active {
+    padding:4px 5px 4px 4px;
+    background:#fff;
+    border:1px solid #ccc;
+    border-right:0px;
+    margin-right:-1px;
+    }
+
+/* Packages */
+div.features-form-package {
+  border:1px solid #ccc;
+  background:#fff;
+  padding:10px;
+  margin:0px 0px 20px;
+  display:none;
+  }
+
+  div.features-package-active { display:block; }
+
+/**
  * Features management form (admin/build/features).
  */
 div.features-empty {
@@ -18,12 +72,13 @@ table.features tr.disabled { color:#999; }
   table.features div.feature strong { font-size:13px; }
   table.features div.feature div.description { font-size:11px; margin:0px; }
 
-  table.features td.name { width:55%; }
-  table.features td.sign { width:15%; }
-  table.features td.state { width:15%; }
-  table.features td.actions { width:15%; }
+  table.features-manage td.name { width:80%; }
+  table.features-manage td.sign { width:20%; }
 
-  table.features td.actions { white-space:nowrap; }
+  table.features-admin td.name { width:60%; }
+  table.features-admin td.sign { width:20%; }
+  table.features-admin td.state { width:10%; }
+  table.features-admin td.actions { width:10%; }
 
   table.features td.sign {
     font-size:9px;
@@ -35,7 +90,9 @@ table.features tr.disabled { color:#999; }
 
   table.features .admin-check,
   table.features .admin-default,
-  table.features .admin-overridden { display: none;}
+  table.features .admin-overridden,
+  table.features .admin-rebuilding,
+  table.features .admin-needs-review { display:none; }
 
 /**
  * Feature export form (admin/build/features/export).
@@ -94,6 +151,9 @@ div.features-components table td.component { padding-left:20px; }
  */
 span.features-component-key { font-size:11px; }
 
+a.admin-update,
+a.features-storage,
+span.features-storage,
 span.features-component-list span {
   white-space:nowrap;
   margin-right:5px;
@@ -104,13 +164,39 @@ span.features-component-list span {
   -webkit-border-radius:5px;
   }
 
+  a.admin-update { background:transparent; }
+
+  /* These pseudo selectors are necessary for themes like Garland. */
+  a.admin-overridden:link,
+  a.admin-overridden:visited,
+  span.admin-overridden {
+    color:#fff;
+    background:#666;
+    }
+
+  a.admin-needs-review:link,
+  a.admin-needs-review:visited,
+  span.admin-needs-review {
+    color:#963;
+    background:#fe6;
+    }
+
+  a.admin-rebuilding:link,
+  a.admin-rebuilding:visited,
+  span.admin-rebuilding {
+    color:#fff;
+    background:#699;
+    }
+
+table.features-diff td.diff-addedline,
 span.features-component-list .features-detected {
   color:#68a;
   background:#def;
   }
 
+table.features-diff td.diff-deletedline,
 span.features-component-list .features-dependency {
-  color:#ccc;
+  color:#999;
   background:#f8f8f8;
   }
 
@@ -118,7 +204,12 @@ span.features-component-list .features-dependency {
  * Features diff.
  */
 table.features-diff { font-size:11px; }
+
+table.features-diff td { padding:0px 5px; }
+
 table.features-diff td.diff-deletedline,
 table.features-diff td.diff-addedline,
-table.features-diff td.diff-context { width:50%; }
-  
+table.features-diff td.diff-context {
+  width:50%;
+  font-family:'Andale Mono',monospace;
+  }
